# sparql-llm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.txt  README-components.md  README.md  compose.dev.yml  compose.override.yml  compose.prod.yml  compose.text2sparql.yml  compose.yml  deploy.sh  docker-compose.dev.yml  docker-compose.yml  expasy_resources_metadata.csv  logging.yml  prestart.sh  pyproject.toml  qdrant_config.yml  release.sh  server.json  sparql-mcp.json
.github/: deploy.sh  release.sh
.github/workflows/: deploy.yml  test.yml
chat-with-context/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
chat-with-context/demo/: index.html  postcss.config.js  style.css  tailwind.config.js  vite.config.ts
chat-with-context/src/: chat-with-context.tsx  highlight.ts  providers.ts  style.css  utils.tsx
collect-queries/: sparql-example-component.js  uniprot-sparql-examples-merge-prefixes.js
notebooks/: EXAMPLE_PROMPT.md  benchmark_expasy_agent.py  check_logs.ipynb  compare_queries_examples_to_void.ipynb  compute_stats_on_example_queries.ipynb  extract_biosoda_queries.ipynb  extract_queries_from_logs.ipynb  fine_tuning.ipynb  gen_bgee_sparql_turtle.ipynb  get_owl_onto_from_void_profile.ipynb  get_shex_from_void.ipynb  parse_sparql.ipynb  prompt_tuning.ipynb  rag_embed_queries.ipynb  rag_get_queries.ipynb  test_example_queries.ipynb  test_expasy_chat.ipynb  test_expasy_chat_with_training_data.ipynb  validate_sparql_query.ipynb
src/expasy-agent/: README.md  expasy_resources_metadata.csv  langgraph.json  pyproject.toml
src/expasy-agent/src/expasy_agent/: config.py  graph.py  main.py  mcp.py  prompts.py  state.py  utils.py
src/expasy-agent/src/expasy_agent/indexing/: index_endpoints.py  index_entities.py  index_resources.py
src/expasy-agent/src/expasy_agent/nodes/: call_model.py  llm_extraction.py  mcp_tools.py  retrieval_docs.py  retrieval_entities.py  tools.py  validation.py
src/expasy-agent/src/expasy_agent/webapp/: index.html
src/expasy-agent/src/expasy_agent/webapp/assets/: index-Bol9YLqq.js  index-C-xjhIBm.js  index-C2ZLL9jG.css  index-CfPczzeE.js  index-Dl-wK0rt.js  index-DsCyZvZ4.js  index-ZxH6z93d.js
src/expasy-agent/tests/: benchmark.py  text2sparql_benchmark.py  text2sparql_error_analysis.py  text2sparql_index.py  try_mcp.py
src/expasy-agent/tests/text2sparql/: README.md  api.py  benchmark.py  compose.virtuoso.yml  data_store.sh  endpoint_schema.py  evaluate.sh  hyperparameter_analysis.py  index.py  query_analysis.py  query_transform.py  store_data.sh
src/expasy-mcp/: Dockerfile  README.md  pyproject.toml
src/expasy-mcp/src/expasy_mcp/: server.py  utils.py
src/expasy_api/: api.py  embed.py  vectordb.py
src/expasy_api/static/: sparql.js  turtle.js
src/expasy_api/templates/: index.html
src/expasy_chat/: __init__.py  api.py  config.py  embed.py  sparql_examples_loader.py  sparql_void_shapes_loader.py  utils.py  validate_sparql.py  void_to_shex.py
src/expasy_chat/templates/: index.html
src/sparql-llm/: README.md  pyproject.toml
src/sparql-llm/src/sparql_llm/: __init__.py  sparql_examples_loader.py  sparql_info_loader.py  sparql_void_shapes_loader.py  utils.py  validate_sparql.py
src/sparql-llm/tests/: void_pubchem.ttl  void_uniprot.ttl
src/sparql_llm/: __init__.py  api.py  config.py  embed.py  embed_entities.py  index.py  index_entities.py  mcp_server.py  sparql_examples_loader.py  sparql_void_shapes_loader.py  utils.py  validate_sparql.py  void_to_shex.py
src/sparql_llm/agent/: config.py  graph.py  main.py  prompts.py  state.py  utils.py
src/sparql_llm/agent/indexing/: index_entities.py  index_resources.py
src/sparql_llm/agent/nodes/: call_model.py  llm_extraction.py  mcp_tools.py  retrieval_docs.py  retrieval_entities.py  tools.py  validation.py
src/sparql_llm/agent/webapp/: index.html
src/sparql_llm/agent/webapp/assets/: index-B9xiiDEl.css  index-BEeGkHfA.css  index-BaQRDYW2.js  index-BoluH3kd.js  index-DUrw8Cxs.css  index-DdKDfX0i.js  index-Dp5RABF9.js  index-quqPNvA6.js
src/sparql_llm/indexing/: index_entities.py  index_resources.py
src/sparql_llm/loaders/: sparql_examples_loader.py  sparql_info_loader.py  sparql_void_shapes_loader.py
src/sparql_llm/templates/: index.html
src/sparql_llm/webapp/: index.html
src/sparql_llm/webapp/assets/: index-BghSGfi9.js  index-LYuD_g3V.js  index-VvqF7Nqd.js  index-lSLak_Zm.css
tests/: benchmark.py  benchmark_biodata.py  examples_pubchem.ttl  test_components.py  test_sparql_llm.py  try_mcp.py
tests/text2sparql/: README.md  api.py  benchmark.py  data_store.sh  endpoint_schema.py  evaluate.sh  experiments_results.py  hyperparameter_analysis.py  index.py  query_analysis.py  query_transform.py
tutorial/: README.md  app.py  chain.py  chainlit.md  compose.yml  graph.py  index.py  mcp_client.py  mcp_server.py  pyproject.toml
tutorial/.chainlit/: config.toml
tutorial/.chainlit/translations/: en-US.json
tutorial/public/: style.css
tutorial/slides/: index.html  package-lock.json  package.json  vite.config.ts
tutorial/slides/public/: slides.md
