[project]
name = "expasy"
description = "Reusable components and complete chat system to improve Large Language Models (LLMs) capabilities when generating SPARQL queries for a given set of endpoints, using Retrieval-Augmented Generation (RAG) and SPARQL query validation from the endpoint schema."
version = "0.0.1"


[tool.uv]
package = false

# https://docs.astral.sh/uv/concepts/projects/workspaces
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
sparql-llm = { workspace = true }
expasy-agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest >=8.3.4",
    "pytest-cov >=6.0.0",
    "ruff >=0.9.6",
    "mypy >=1.15.0",
    "pre-commit >=4.1.0",
    "ipykernel >=6.29.5",
    "pandas >=2.2.3",
    "SPARQLWrapper >=2.0.0",
    "sparql-llm",
    "expasy-agent[cpu]",

    "chainlit",
    # "pyright",
    # "oxrdflib",
]
