[project]
name = "tutorial-sparql-agent"
version = "0.0.1"
requires-python = "==3.12.*"

dependencies = [
    "sparql-llm >=0.0.8",
    # "sparql-llm @ git+https://github.com/sib-swiss/sparql-llm.git#subdirectory=src/sparql-llm",
    # "sparql-llm @ file:///home/vemonet/dev/expasy/sparql-llm/src/sparql-llm",
    "langchain >=0.3.19",
    "langchain-openai >=0.3.6",
    "langchain-groq >=0.2.4",
    "langchain-ollama >=0.2.3",
    "qdrant-client >=1.13.0",
    "fastembed >=0.5.1",
    # "fastembed-gpu >=0.5.1", # Optional GPU support
    "chainlit",
    "langgraph >=0.2.73",
    "langchain-qdrant >=0.2.0",
    "langchain-community >=0.3.17",
]
