[project]
name = "tutorial-sparql-agent"
version = "0.0.1"
requires-python = "==3.12.*"

dependencies = [
    "sparql-llm >=0.0.8",
    # "sparql-llm @ git+https://github.com/sib-swiss/sparql-llm.git#subdirectory=src/sparql-llm",
    # "sparql-llm @ file:///home/vemonet/dev/expasy/sparql-llm/src/sparql-llm",
    "langchain >=0.3.27",
    "langchain-mistralai >=0.2.12",
    "langchain-google-genai >=0.1.5",
    "langchain-openai >=0.3.6",
    "langchain-ollama >=0.2.3",

    "qdrant-client >=1.15.1",
    "fastembed >=0.7.3",
    # "fastembed-gpu >=0.5.1", # Optional GPU support
    "chainlit >=2.8.1",
    # "langgraph >=0.2.73",
    # "langchain-qdrant >=0.2.0",
    # "langchain-community >=0.3.17",
]
